--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   background: #222;
-  background-image: url('https://source.unsplash.com/1600x900/?landscape');
+  background-image: url('https://source.unsplash.com/1600x900/?nature,water,landscape');
   font-size: 120%;
 }
 
